[tool.poetry]
name = "llama-moss"
version = "0.1.0"
description = ""
authors = ["calebgcc <calebgucciardi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
tensorboard = "^2.18.0"
pillow = "^11.0.0"
torchvision = "^0.20.1"
accelerate = "^1.1.1"
huggingface-hub = "^0.26.2"
datasets = "^3.1.0"
transformers = "^4.46.2"
peft = "^0.13.2"
trl = "^0.12.1"
qwen-vl-utils = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
